--- a/Instagram Clone - React + Tailwind/src/index.css
+++ b/Instagram Clone - React + Tailwind/src/index.css
@@ -4,3 +4,13 @@ span {
   font-size: 14px;
   font-weight: 500;
 }
+
+.gradient-border {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  height: 50px;
+  border-radius: 100%;
+  background: linear-gradient(45deg, #ff00ff, #ff6600, rgb(240, 207, 22));
+}
