--- a/Instagram Clone - React + Tailwind/src/index.css
+++ b/Instagram Clone - React + Tailwind/src/index.css
@@ -5,12 +5,27 @@ span {
   font-weight: 500;
 }
 
-.gradient-border {
+.dp {
+  width: 60px;
+  height: 60px;
+}
+
+.inner-border {
+  background-color: rgb(0, 0, 0);
+  width: 65px;
+  height: 65px;
+  border-radius: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 50px;
-  height: 50px;
+}
+
+.gradient-border {
+  width: 70px;
+  height: 70px;
   border-radius: 100%;
-  background: linear-gradient(45deg, #ff00ff, #ff6600, rgb(240, 207, 22));
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(45deg, rgb(240, 207, 22), #ff6600, #ff00ff);
 }
